@@ -1,5 +1,8 @@
 CHANGELOG
 
+August 4th, 2010
+  - Added a few tests, changed error conditions for getting data from the API
+
 August 2nd, 2010
   - Fixed a bug with removing objects through the API (thanks meeech!)
   - Fixed an issue in recurseXML to properly return errors
